@@ -2,7 +2,8 @@
 - History records which also are bookmarks are now shown in history. Clicking on the star allow to set or unset an history record as bookmark.
 - Bookmarks/history storage can be set to an internal database through preferences, for people concerned about privacy or who wants to keep different bookmarks set. Default behaviour is to use Android bookmarks database.
 - Handle HTTP Authentication.
-- Support system proxy (thanks to LeChuck). You will have to use a third-party application like "Proxy Settings" on the market to modify the system proxy settings. 
+- Support system proxy (thanks to LeChuck). You will have to use a third-party application like "Proxy Settings" on the market to modify the system proxy settings.
+- Last visited page can be restored when the browser restart. Must be enabled in preferences. 
 
 0.4.1:
 - Bugfixes for force close under Android >= 3.
